# maxcalc

./: .gitignore  .hgignore  Build.txt  ChangeLog.md  Changelog.txt  Doxyfile  HowToBuild.md  HowToBuild.txt  License.txt  Licenses.txt  ProjectHome.md  Readme.txt  build.bat  create_release.bat
doc/: Changelog.txt  Features v2.0.txt  MathML.txt  MaxCalc Parser specification.odt  Parser specification.txt  Performance opmizations.ods  Roadmap v2.0.txt  TODO.txt
maxcalc/src/: maxcalc.cpp
src/: CMakeLists.txt  Doxyfile  PKGBUILD  generate_vcproj.bat  generate_vcproj_wince.bat  maxcalc.pro  maxcalc.sln  maxcalc_config.pri  test.py  test_random_input.py
src/cli/: CMakeLists.txt  binreloc.cpp  cli.pro  main.cpp  pch.h  resources.rc  simpleini.h
src/engine/: CMakeLists.txt  Markup.cpp  Markup.h  bigdecimal.cpp  bigdecimal.h  bigdecimalformat.cpp  bigdecimalformat.h  commandparser.cpp  commandparser.h  complex.cpp  complex.h  complexformat.cpp  complexformat.h  constants.cpp  constants.h  engine.pro  exceptions.h  i18n.cpp  i18n.h  mathmlparser.cpp  mathmlparser.h  maxcalcengine.pro  parser.cpp  parser.h  parsercontext.cpp  parsercontext.h  pch.h  precision.h  unicode.cpp  unicode.h  unitconversion.cpp  unitconversion.h  variables.cpp  variables.h  version.h
src/engine/decNumber/: decContext.cpp  decContext.h  decNumber.cpp  decNumber.h  decNumber.pri  decNumberLocal.h  stdint.h
src/gui/: CMakeLists.txt  aboutbox.cpp  aboutbox.h  gui.pro  inputbox.cpp  inputbox.h  main.cpp  mainwindow.cpp  mainwindow.h  miceventhandler.cpp  miceventhandler.h  myaction.cpp  myaction.h  outputsettings.cpp  outputsettings.h  pch.h  resources.qrc  resources.rc
src/gui/qtsingleapplication/: qtlockedfile_win.cpp  qtsingleapplication.pri
src/gui/translations/: maxcalcgui_ru.ts
src/gui_gtk/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/i18n/: i18n.cpp  i18n.h  i18n.pri
src/intl_win/: libintl.h
src/maxcalc/: CMakeLists.txt  main.cpp  maxcalc.vcproj
src/maxcalc-cli/: CMakeLists.txt  main.cpp  maxcalc-cli.pro  maxcalc-cli.vcproj  pch.h  unicode.h
src/maxcalc-gui/: CMakeLists.txt  aboutbox.cpp  aboutbox.h  inputbox.cpp  inputbox.h  main.cpp  mainwindow.cpp  mainwindow.h  maxcalc-gui.aps  maxcalc-gui.pro  maxcalc-gui.vcproj  myaction.cpp  myaction.h  pch.h
src/maxcalcengine/: CMakeLists.txt  bigdecimal.cpp  bigdecimal.h  bigdecimalformat.cpp  bigdecimalformat.h  complex.cpp  complex.h  complexformat.cpp  complexformat.h  exception.h  exceptions.h  maxcalcengine.pro  maxcalcengine.vcproj  numberformats.cpp  numberformats.h  parser.cpp  parser.h  parsercontext.cpp  parsercontext.h  pch.h  precision.h  settings.h  stringconv.cpp  stringconv.h  tstring.cpp  tstring.h  unicode.cpp  unicode.h  unitconversion.cpp  unitconversion.h  variables.cpp  variables.h  version.h
src/maxcalcengine/decNumber/: decContext.cpp  decContext.h  decNumber.cpp  decNumber.h  decNumberLocal.h  gstdint.h  stdint.h
src/maxcalctest/: CMakeLists.txt  bigdecimalbench.cpp  bigdecimalbench.h  bigdecimalcompare.h  bigdecimaltest.cpp  bigdecimaltest.h  complextest.cpp  complextest.h  main.cpp  maxcalctest.pro  maxcalctest.vcproj  parsertest.cpp  parsertest.h  stringconv.cpp  test.cpp  test.h  unitconversiontest.cpp  utility.h  variablestest.cpp
src/qmaxcalc/: CMakeLists.txt  main.cpp  qmaxcalc.vcproj
src/test/: CMakeLists.txt  bigdecimaltest.cpp  bigdecimaltest.h  complextest.cpp  complextest.h  main.cpp  parsertest.cpp  parsertest.h  pch.h  test.pro  unitconversiontest.cpp  unitconversiontest.h  utility.h  variablestest.cpp  variablestest.h
util/: clean.bat  clean.sh  create_release_win.bat  generate_vcproj.bat  generate_vcproj_wince.bat  test_random_expr.py  test_random_input.py
